--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -17,15 +17,15 @@
         android:orientation="horizontal"
         app:layout_scrollFlags="scroll|enterAlways">
 
-        <ImageButton
-            android:id="@+id/search_back_ib"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"
-            android:background="@android:color/transparent"
-            android:contentDescription="@null"
-            android:src="@drawable/selector_back_arrow_bg" />
+        <!--<ImageButton-->
+            <!--android:id="@+id/search_back_ib"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginEnd="@dimen/dp_12"-->
+            <!--android:layout_marginRight="@dimen/dp_12"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:contentDescription="@null"-->
+            <!--android:src="@drawable/selector_back_arrow_bg" />-->
 
         <TextView
             android:id="@+id/search_tv"
@@ -57,23 +57,11 @@
                 android:paddingLeft="@dimen/dp_26"
                 android:paddingRight="@dimen/dp_1"
                 android:paddingStart="@dimen/dp_26"
+                android:hint="@string/search_tint"
                 android:textColor="@color/title_black"
                 android:textCursorDrawable="@drawable/shape_cursor"
                 android:textSize="@dimen/sp_14" />
 
-            <TextView
-                android:id="@+id/search_tint_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_6"
-                android:layout_marginStart="@dimen/dp_6"
-                android:drawableLeft="@drawable/ic_search"
-                android:drawableStart="@drawable/ic_search"
-                android:gravity="center"
-                android:text="@string/search_tint"
-                android:textColor="@color/grey_search"
-                android:textSize="@dimen/sp_14" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
