--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,15 @@
     <style name="AppTheme" parent="BaseAppTheme.NoActionBar">
     </style>
 
+    <style name="AppTheme.FullScreen" parent="@style/Theme.AppCompat.DayNight">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="android:windowDisablePreview">true</item>
+    </style>
+
     <style name="SplashTheme" parent="BaseAppTheme.NoActionBar">
         <item name="android:windowFullscreen">true</item>
     </style>
